syntax = "proto3";

package logger;

// The Logger service definition.
service LoggerService {
  // Logs an event into the system.
  rpc LogEvent (LogRequest) returns (LogResponse);

  // Retrieves logs with filtering and cursor-based pagination.
  rpc GetLogs (GetLogsRequest) returns (GetLogsResponse);

  // Logs a user activity event into the system.
  rpc LogUserActivity (UserActivityLogRequest) returns (LogResponse);

  // Retrieves user activity logs with filtering and page number-based pagination.
  rpc GetUserActivityLogs (GetUserActivityRequest) returns (GetUserActivityResponse);
}

// The request message containing the log details.
message LogRequest {
  string did = 1;          // User identity
  string traceId = 2;      // Unique trace identifier
  string serviceName = 3;  // Name of the service generating the log
  string level = 4;        // Log level (info, error, etc.)
  string message = 5;      // Log message
  string startTime = 6;    // Start time of the event (ISO string)
  string endTime = 7;      // End time of the event (ISO string)
}

// The response message indicating if the log was successfully recorded.
message LogResponse {
  bool acknowledged = 1;
}

// The request message for GetLogs.
message GetLogsRequest {
  string did = 1;          // Optional: Filter logs by user identity
  int32 pageSize = 2;      // Number of logs per page
  string pagingState = 3;  // Optional: Cursor for pagination
}

// Represents a single log entry.
message LogRecord {
  string did = 1;
  string traceId = 2;
  string serviceName = 3;
  string level = 4;
  string message = 5;
  string startTime = 6;
  string endTime = 7;
  string loggedAt = 8;     // Timestamp when the log was recorded
}

// Represents a group of logs sharing the same traceId.
message TraceGroup {
  string traceId = 1;
  repeated LogRecord logs = 2;
}

// The response message for GetLogs.
message GetLogsResponse {
  repeated TraceGroup traceGroups = 1; // Grouped logs by traceId
  string nextPagingState = 2;          // Cursor for the next page
}

// The request message containing the user activity log details.
message UserActivityLogRequest {
  string did = 1;         // User identity
  string traceId = 2;     // Unique trace identifier
  string level = 3;       // Log level (info, error, etc.)
  string message = 4;     // Log message
  int64 duration = 5;     // Duration in milliseconds
}

// The request message for GetUserActivityLogs.
message GetUserActivityRequest {
  string did = 1;          // Optional: Filter logs by user identity
  int32 pageSize = 2;      // Number of logs per page
  int32 pageNumber = 3;    // Page number (starting at 1)
}

// Represents a single user activity log entry.
message UserActivityLog {
  string did = 1;
  string traceId = 2;
  string level = 3;
  string message = 4;
  int64 duration = 5;      // Duration in milliseconds
  string loggedAt = 6;     // Timestamp when the log was recorded
}

// The response message for GetUserActivityLogs.
message GetUserActivityResponse {
  repeated UserActivityLog logs = 1; // List of user activity logs
  int32 pageNumber = 2;              // Current page number
  int32 totalLogs = 3;               // Total number of logs available
}
